--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
+    "react-i18next": "^12.1.4",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-spinners": "^0.13.7",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
